--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -79,9 +79,21 @@ jobs:
           Add-Content -Encoding UTF8 -Path $env:GITHUB_OUTPUT -Value "githubOwner=$githubOwner"
           Write-Host "githubOwner=$githubOwner"
 
-  SetupRepositories:
+  Ref:
     runs-on: [ ubuntu-latest ]
     needs: [ Check ]
+    name: 'Ref=${{ github.event.inputs.ref }}'
+    if: github.event.inputs.ref == ''
+    steps:
+      - name: OK
+        run: |
+          # If the ref is empty, we are running on the main branch and this job is successful
+          # If the ref is not empty, this job is skipped and deploy will not see the end to end tests as useful for determining success
+          Write-Host "Running on main_sha"
+
+  SetupRepositories:
+    runs-on: [ ubuntu-latest ]
+    needs: [ Check, Ref ]
     outputs:
       actionsRepo: ${{ steps.setup.outputs.actionsRepo }}
       perTenantExtensionRepo: ${{ steps.setup.outputs.perTenantExtensionRepo }}
