--- a/Actions/WorkflowInitialize/action.yaml
+++ b/Actions/WorkflowInitialize/action.yaml
@@ -32,7 +32,7 @@ runs:
       env:
         _eventId: ${{ inputs.eventId }}
         _actionsRepo: ${{ inputs.actionsRepo }}
-        _actionsRef: ${{ inputs.actionRef }}
+        _actionsRef: ${{ inputs.actionsRef }}
       run: |
         $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
         try {
