--- a/.github/workflows/E2E.yaml
+++ b/.github/workflows/E2E.yaml
@@ -1,5 +1,7 @@
 name: End to end tests
 
+run-name: End to end tests - ${{ github.event.inputs.ref != '' && github.event.inputs.ref || github.sha }}
+
 on:
   workflow_dispatch:
     inputs:
