--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -77,6 +77,7 @@ jobs:
           directCommit: '${{ github.event.inputs.directCommit }}'
           downloadLatest: ${{ github.event.inputs.downloadLatest }}
           eventName: ${{ github.event_name }}
+          GH_TOKEN: ${{ github.token }}
         run: |
           $errorActionPreference = "Stop";
           $ProgressPreference = "SilentlyContinue";
