check branch protection

--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -86,9 +86,10 @@ jobs:
           Write-Host $ENV:eventName
           if ($ENV:eventName -eq 'schedule') {
             Write-Host "Running Update AL-Go System Files on a schedule."
-            $rules = gh api /repos/$env:GITHUB_REPOSITORY/rules/branches/$env:GITHUB_REF | ConvertFrom-Json
+            $rules = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/rules/branches/$env:GITHUB_REF | ConvertFrom-Json
+            $branchProtection = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/branches/$env:GITHUB_REF/protection | ConvertFrom-Json
             $downloadLatest = 'true'
-            if ($rules | Where-Object { $_.type -eq 'pull_request' }) {
+            if (($rules | Where-Object { $_.type -eq 'pull_request' }) -or ($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews")) {
               Write-Host "$($env:GITHUB_REF) branch requires a Pull Request"
               $directCommit = 'false'
             }
