--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -90,11 +90,11 @@ jobs:
             $branchProtection = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/branches/$env:GITHUB_REF/protection | ConvertFrom-Json
             $downloadLatest = 'true'
             if (($rules | Where-Object { $_.type -eq 'pull_request' }) -or ($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews")) {
-              Write-Host "$($env:GITHUB_REF) branch requires a Pull Request"
+              Write-Host "Pull request is required for branch $($env:GITHUB_REF)"
               $directCommit = 'false'
             }
             else {
-              Write-Host "No pull request required, using direct commit"
+              Write-Host "No pull request required for branch $($env:GITHUB_REF)"
               $directCommit = 'true'
             }
           }
