--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -74,10 +74,10 @@ jobs:
 
       - name: Calculate Input
         env:
-          directCommit: '${{ github.event.inputs.directCommit }}'
+          directCommit: ${{ github.event.inputs.directCommit }}
           downloadLatest: ${{ github.event.inputs.downloadLatest }}
           eventName: ${{ github.event_name }}
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
         run: |
           $errorActionPreference = "Stop";
           $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
@@ -85,17 +85,22 @@ jobs:
           $downloadLatest = $ENV:downloadLatest
           Write-Host $ENV:eventName
           if ($ENV:eventName -eq 'schedule') {
-            Write-Host "Running Update AL-Go System Files on a schedule."
-            $rules = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/rules/branches/$env:GITHUB_REF | ConvertFrom-Json
-            $branchProtection = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/branches/$env:GITHUB_REF/protection | ConvertFrom-Json
             $downloadLatest = 'true'
-            if (($rules | Where-Object { $_.type -eq 'pull_request' }) -or ($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews")) {
-              Write-Host "Pull request is required for branch $($env:GITHUB_REF)"
-              $directCommit = 'false'
+            $directCommit = 'true'
+            try {
+              Write-Host "Running Update AL-Go System Files on a schedule."
+              $rules = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/rules/branches/$env:GITHUB_REF | ConvertFrom-Json
+              $branchProtection = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/branches/$env:GITHUB_REF/protection | ConvertFrom-Json
+              if (($rules | Where-Object { $_.type -eq 'pull_request' }) -or ($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews")) {
+                Write-Host "Pull request is required for branch $($env:GITHUB_REF)"
+                $directCommit = 'false'
+              }
+              else {
+                Write-Host "No pull request required for branch $($env:GITHUB_REF)"
+              }
             }
-            else {
-              Write-Host "No pull request required for branch $($env:GITHUB_REF)"
-              $directCommit = 'true'
+            catch {
+              Write-Host "Error occurred while checking branch protection: $_"
             }
           }
           Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "directCommit=$directCommit"
