--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -77,7 +77,7 @@ jobs:
           directCommit: ${{ github.event.inputs.directCommit }}
           downloadLatest: ${{ github.event.inputs.downloadLatest }}
           eventName: ${{ github.event_name }}
-          GH_TOKEN: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
+          GhTokenWorkflow: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
         run: |
           $errorActionPreference = "Stop";
           $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
@@ -89,11 +89,12 @@ jobs:
             $directCommit = 'true'
             try {
               Write-Host "Running Update AL-Go System Files on a schedule."
+              $ENV:GH_TOKEN = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String($env:GhTokenWorkflow))
               $rules = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/rules/branches/$env:GITHUB_REF | ConvertFrom-Json
               $branchProtection = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/branches/$env:GITHUB_REF/protection | ConvertFrom-Json
               if (($rules | Where-Object { $_.type -eq 'pull_request' }) -or ($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews")) {
                 Write-Host "Pull request is required for branch $($env:GITHUB_REF)"
-                $directCommit = 'false' #testing
+                $directCommit = 'false'
               }
               else {
                 Write-Host "No pull request required for branch $($env:GITHUB_REF)"
