--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -92,7 +92,7 @@ jobs:
               $ENV:GH_TOKEN = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String($env:GhTokenWorkflow))
               $rules = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/rules/branches/$env:GITHUB_REF | ConvertFrom-Json
               $branchProtection = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/branches/$env:GITHUB_REF/protection | ConvertFrom-Json
-              if (($rules | Where-Object { $_.type -eq 'pull_request' }) -or ($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews")) {
+              if (($rules | Where-Object { $_.type -eq 'pull_request' }) -or (($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews") -and $branchProtection.enforce_admins.enabled)) {
                 Write-Host "Pull request is required for branch $($env:GITHUB_REF)"
                 $directCommit = 'false'
               }
