--- a/Templates/AppSource App/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/AppSource App/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -92,9 +92,18 @@ jobs:
               $ENV:GH_TOKEN = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String($env:GhTokenWorkflow))
               $rules = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/rules/branches/$env:GITHUB_REF_NAME | ConvertFrom-Json
               $branchProtection = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/branches/$env:GITHUB_REF_NAME/protection | ConvertFrom-Json
-              if (($rules | Where-Object { $_.type -eq 'pull_request' }) -or (($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews") -and $branchProtection.enforce_admins.enabled)) {
-                Write-Host "Pull request is required for branch $($env:GITHUB_REF_NAME)"
+              if ($rules | Where-Object { $_.type -eq 'pull_request' }) {
+                Write-Host "Pull request rule exists for branch $($env:GITHUB_REF_NAME)"
                 $directCommit = 'false'
+              }
+              elseif ($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews") {
+                Write-Host "Branch protection requires pull request for branch $($env:GITHUB_REF_NAME)"
+                if ($branchProtection.enforce_admins.enabled) {
+                  $directCommit = 'false'
+                }
+                else {
+                  Write-Host "Update AL-Go System Files will bypass branch protection for branch $($env:GITHUB_REF_NAME)"
+                }
               }
               else {
                 Write-Host "Pull request not required for branch $($env:GITHUB_REF_NAME)"
