--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -110,7 +110,7 @@ jobs:
               }
             }
             catch {
-              Write-Host "Error occurred while checking branch protection for branch $($env:GITHUB_REF_NAME): $_" #test
+              Write-Host "Error occurred while checking branch protection for branch $($env:GITHUB_REF_NAME): $_"
             }
           }
           Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "directCommit=$directCommit"
