--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -73,7 +73,7 @@ jobs:
             Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "templateUrl=$templateUrl"
           }
 
-      - name: Update AL-Go system files (manual trigger)
+      - name: Update AL-Go system files (manual triggerx)
         if: github.event_name == 'workflow_dispatch'
         uses: microsoft/AL-Go-Actions/CheckForUpdates@main
         with:
