--- a/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/Per Tenant Extension/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -107,8 +107,7 @@ jobs:
           templateUrl: ${{ env.templateUrl }}
           directCommit: false
 
-      - name: Update AL-Go system files (scheduled trigger - try pull request)
-        if: env.UpdateError != ''
+      - name: Report error
         run: |
           $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
           Write-Host "::ERROR::$env:UpdateError"
