--- a/Templates/AppSource App/.github/workflows/UpdateGitHubGoSystemFiles.yaml
+++ b/Templates/AppSource App/.github/workflows/UpdateGitHubGoSystemFiles.yaml
@@ -29,6 +29,7 @@ env:
 
 jobs:
   UpdateALGoSystemFiles:
+    name: 'Update AL-Go System Files'
     needs: [ ]
     runs-on: [ windows-latest ]
     steps:
@@ -72,60 +73,47 @@ jobs:
             Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "templateUrl=$templateUrl"
           }
 
-      - name: Calculate Input
-        env:
-          directCommit: ${{ github.event.inputs.directCommit }}
-          downloadLatest: ${{ github.event.inputs.downloadLatest }}
-          eventName: ${{ github.event_name }}
-          GhTokenWorkflow: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
-        run: |
-          $errorActionPreference = "Stop";
-          $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
-          $directCommit = $ENV:directCommit
-          $downloadLatest = $ENV:downloadLatest
-          Write-Host $ENV:eventName
-          if ($ENV:eventName -eq 'schedule') {
-            $downloadLatest = 'true'
-            $directCommit = 'true'
-            try {
-              Write-Host "Running Update AL-Go System Files on a schedule."
-              $ENV:GH_TOKEN = [System.Text.Encoding]::UTF8.GetString([System.Convert]::FromBase64String($env:GhTokenWorkflow))
-              $rules = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/rules/branches/$env:GITHUB_REF_NAME | ConvertFrom-Json
-              $branchProtection = gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/$env:GITHUB_REPOSITORY/branches/$env:GITHUB_REF_NAME/protection | ConvertFrom-Json
-              if ($rules | Where-Object { $_.type -eq 'pull_request' }) {
-                Write-Host "Pull request rule exists for branch $($env:GITHUB_REF_NAME)"
-                $directCommit = 'false'
-              }
-              elseif ($branchProtection.PSObject.Properties.Name -eq "required_pull_request_reviews") {
-                Write-Host "Branch protection requires pull request for branch $($env:GITHUB_REF_NAME)"
-                if ($branchProtection.enforce_admins.enabled) {
-                  $directCommit = 'false'
-                }
-                else {
-                  Write-Host "Update AL-Go System Files will bypass branch protection for branch $($env:GITHUB_REF_NAME)"
-                }
-              }
-              else {
-                Write-Host "Pull request not required for branch $($env:GITHUB_REF_NAME)"
-              }
-            }
-            catch {
-              Write-Host "Error occurred while checking branch protection for branch $($env:GITHUB_REF_NAME): $_"
-            }
-          }
-          Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "directCommit=$directCommit"
-          Add-Content -Encoding UTF8 -Path $env:GITHUB_ENV -Value "downloadLatest=$downloadLatest"
-
-      - name: Update AL-Go system files
+      - name: Update AL-Go system files (manual trigger)
+        if: github.event_name == 'workflow_dispatch'
         uses: microsoft/AL-Go-Actions/CheckForUpdates@main
         with:
           shell: powershell
           token: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
-          downloadLatest: ${{ env.downloadLatest }}
+          downloadLatest: ${{ github.event.inputs.downloadLatest }}
           update: 'Y'
           templateUrl: ${{ env.templateUrl }}
-          directCommit: ${{ env.directCommit }}
+          directCommit: ${{ github.event.inputs.directCommit }}
 
+      - name: Update AL-Go system files (scheduled trigger - try direct commit)
+        if: github.event_name == 'schedule'
+        continue-on-error: true
+        uses: microsoft/AL-Go-Actions/CheckForUpdates@main
+        with:
+          shell: powershell
+          token: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
+          downloadLatest: true
+          update: 'Y'
+          templateUrl: ${{ env.templateUrl }}
+          directCommit: true
+
+      - name: Update AL-Go system files (scheduled trigger - try pull request)
+        if: env.UpdateStatus != 'Success' && github.event_name == 'schedule'
+        uses: microsoft/AL-Go-Actions/CheckForUpdates@main
+        with:
+          shell: powershell
+          token: ${{ fromJson(steps.ReadSecrets.outputs.Secrets).ghTokenWorkflow }}
+          downloadLatest: true
+          update: 'Y'
+          templateUrl: ${{ env.templateUrl }}
+          directCommit: false
+
+      - name: Report error
+        if: env.UpdateStatus != 'Success'
+        run: |
+          $errorActionPreference = "Stop"; $ProgressPreference = "SilentlyContinue"; Set-StrictMode -Version 2.0
+          Write-Host "::ERROR::$env:UpdateStatus"
+          exit 1
+  
       - name: Finalize the workflow
         if: always()
         uses: microsoft/AL-Go-Actions/WorkflowPostProcess@main
